--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
            <p style="font-size:3vh;color:#fff;">诚信是人最美丽的外套,是心灵最圣洁的鲜花。。</p>
            <p style="line-height:3;">
 		   
-           <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://www.liftsail.top">首页</a>
- 
+           <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://www.liftsail.top">主页</a>
+           <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.cnblogs.com/liftsail">博客</a>
 		   <!--
 		   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://putuoshan.me/fh.php?id=1">业务</a>
 		   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://putuoshan.me/fh.php?id=1">游戏</a>
@@ -33,7 +33,7 @@
          </p>
          <p style="color:#fff;">你的地址:<script>
                     document.write(returnCitySN["cname"])
-                   </script>© <a style="text-decoration:none;color:#fff;" href="https://www.cnblogs.com/liftsail">Yu</a>.版权所有</p>
+                   </script>© <a style="text-decoration:none;color:#fff;" href="https://www.cnblogs.com/liftsail">🔥</a>.版权所有</p>
                    <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="./style/js/canvas-nest.min.js"></script>
         </div>
      
