--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                     document.write(returnCitySN["cip"])
                    </script></span>
          </p>
-         <p style="color:#fff;">你的地址:<script>
+         <p style="color:#fff;">你的地址:
+		 <script>
                     document.write(returnCitySN["cname"])
-                   </script>© <a style="text-decoration:none;color:#fff;" href="https://www.cnblogs.com/liftsail">🔥</a>.版权所有</p>
-                   <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="./style/js/canvas-nest.min.js"></script>
+                 </script>
+	</p>
+	<p><a style="text-decoration:none;color:#fff;" href="https://www.ncac.gov.cn/">©版权所有</a></p>
+        <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="./style/js/canvas-nest.min.js"></script>
         </div>
      
 </body>
