--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-       <title>帅呆了</title>
+       <title>帅呆了🚀</title>
         <meta name="keywords" content="liftsail.top" />
         <meta name="description" content="liftsail.top" />
     </head>
