--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		   
            <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://www.liftsail.top">主页</a>
            <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.cnblogs.com/liftsail">博客</a>
+	   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/category.html">目录</a>
 		   <!--
 		   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://putuoshan.me/fh.php?id=1">业务</a>
 		   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://putuoshan.me/fh.php?id=1">游戏</a>
