--- a/category.html
+++ b/category.html
@@ -1,2 +1,4 @@
 <h3>目录</h3>
-<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SptingCloud">SptingCloud</a>
+<div style="text-align:center;border-width:1px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#79918e6b;border-radius:20px;">
+<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud">SpringCloud</a>
+</div>
