--- a/category.html
+++ b/category.html
@@ -1,4 +1,8 @@
-<div style="text-align:center;border-width:1px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#79918e6b;border-radius:20px;">
-<h3>目录</h3>
-<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
-</div>
+<body style="padding:12% 5% 5% 5%;background-image:url(./style/images/img/logo.jpeg);">
+  <div style="text-align:center;border-width:1px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#79918e6b;border-radius:20px;">
+    <h3>目录</h3>
+    <p>
+      <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
+    </p>
+  </div>
+</body>
