--- a/category.html
+++ b/category.html
@@ -4,6 +4,7 @@
     <p></p>
     <p>
       <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
+      <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
     </p>
     <p></p>
   </div>
