--- a/category.html
+++ b/category.html
@@ -14,7 +14,7 @@
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/MyBatis" target="_blank">MyBatis</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/FunctionalProgram" target="_blank">函数式编程</a>
-      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
+      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringSecurity" target="_blank">SpringSecurity</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
