--- a/category.html
+++ b/category.html
@@ -15,9 +15,9 @@
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/MyBatis" target="_blank">MyBatis</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/FunctionalProgram" target="_blank">函数式编程</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringSecurity" target="_blank">SpringSecurity</a>
-      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
-      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
-      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
+      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/JWT/JWT.md" target="_blank">JWT教程</a>
+      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/Annotation/Annotation.md" target="_blank">自定义注解</a>
+      <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringIOCAOP/Spring.md" target="_blank">SpringIOCAOP</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
       <a style="border-radius:10px;padding:7px 30px;margin:0px 10px;color:#fff;border-style:solid;text-decoration:none;" href="https://liftsail.github.io/SpringCloud" target="_blank">SpringCloud</a>
